--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,5 +1,5 @@
 FIND_PACKAGE(PythonInterp REQUIRED)
-OPTION(BUILD_DOCS "Build documentation" ON) # ON/OFF
+OPTION(BUILD_DOCS "Build documentation" OFF) # ON/OFF
 IF (TASKSCH_BUILD_WITH_DOCS)
     ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/docs)
 ENDIF ()
