--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
-OPTION(BUILD_TESTS "Build tests" ON) # ON/OFF
+OPTION(BUILD_TESTS "Build tests" OFF) # ON/OFF
 IF (BUILD_TESTS)
-    MESSAGE("${.r}=====> PROCESSING TESTS${..}")
+    MESSAGE("\n${.g}=====> ${.r}P${.y}R${.m}O${.y}C${.b}E${.m}S${.g}S${.c}I${.y}N${.r}G ${.m}T${.c}E${.g}S${.r}T${.y}S${..}\n")
     ENABLE_TESTING()
     ####################################
     ######## EXTERNAL LIBRARIES ########
@@ -28,6 +28,8 @@ IF (BUILD_TESTS)
             ADD_EXECUTABLE(${PACKAGE_TEST} ${CMAKE_SOURCE_DIR}/test/${PACKAGE}/${PACKAGE_TEST}/${PACKAGE_TEST}.cpp)
             ADD_DEFINITIONS("-DFOS_LOGGING=DEBUG" "-DNATIVE" "-Wno-ambiguous-reversed-operator")
             TARGET_LINK_LIBRARIES(${PACKAGE_TEST} unity::framework tsl::ordered_map paho-mqttpp3)
+            #TARGET_PRECOMPILE_HEADERS(${PACKAGE_TEST} PUBLIC ${ROOT_SOURCE_DIR}/test_fhatos.hpp)
+            TARGET_PRECOMPILE_HEADERS(${PACKAGE_TEST} REUSE_FROM ${PROJECT_NAME})
             SET_TARGET_PROPERTIES(${PACKAGE_TEST} PROPERTIES
                     ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test/build"
                     LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test/build"
@@ -37,11 +39,12 @@ IF (BUILD_TESTS)
                     # UNITY_BUILD ON
                     UNITY_BUILD_MODE BATCH
                     UNITY_BUILD_BATCH_SIZE 16)
-            IF(CMAKE_BUILD_TYPE MATCHES "DEBUG")
+            IF (CMAKE_BUILD_TYPE MATCHES "DEBUG")
                 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -O1 -fno-omit-frame-pointer -g")
                 TARGET_LINK_OPTIONS(${PACKAGE_TEST} BEFORE PUBLIC -fsanitize=undefined PUBLIC -fsanitize=address)
-            ENDIF()
+            ENDIF ()
             ADD_TEST(${PACKAGE_TEST} ${CMAKE_BINARY_DIR}/test/build/${PACKAGE_TEST}.out)
+            SET_TESTS_PROPERTIES(${PACKAGE_TEST} PROPERTIES TIMEOUT 10)
             MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
         ENDFOREACH ()
         MATH(EXPR COUNTER "${COUNTER}+${TOTAL}")
