--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -3,8 +3,8 @@ OPTION(BUILD_DOCS "Build documentation" OFF) # ON/OFF
 IF (TASKSCH_BUILD_WITH_DOCS)
     ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/docs)
 ENDIF ()
-OPTION(BUILD_CODE_RUNNERS "Build code runners" ON) # ON/OFF
-IF (BUILD_CODE_RUNNERS)
+IF (BUILD_DOCS)
+    MESSAGE("\n${.g}=====> ${.r}P${.y}R${.m}O${.y}C${.b}E${.m}S${.g}S${.c}I${.y}N${.r}G ${.m}D${.c}O${.g}C${.r}S${..}\n")
     SET(TOTAL 0)
     FUNCTION(MAKE_CODE_RUNNERS PACKAGE PACKAGE_RUNNERS)
         SET(COUNTER 0)
@@ -15,6 +15,7 @@ IF (BUILD_CODE_RUNNERS)
             ADD_EXECUTABLE(${PACKAGE_RUNNER} ${CMAKE_SOURCE_DIR}/docs/src/${PACKAGE}/${PACKAGE_RUNNER}/${PACKAGE_RUNNER}.cpp)
             ADD_DEFINITIONS("-DNATIVE" "-Wno-ambiguous-reversed-operator")
             TARGET_LINK_LIBRARIES(${PACKAGE_RUNNER} tsl::ordered_map paho-mqttpp3)
+            TARGET_PRECOMPILE_HEADERS(${PACKAGE_RUNNER} REUSE_FROM ${PROJECT_NAME})
             SET_TARGET_PROPERTIES(${PACKAGE_RUNNER} PROPERTIES
                     ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/docs/build"
                     LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/docs/build"
@@ -26,14 +27,9 @@ IF (BUILD_CODE_RUNNERS)
         MATH(EXPR COUNTER "${COUNTER}+${TOTAL}")
         SET(TOTAL ${COUNTER} PARENT_SCOPE)
     ENDFUNCTION(MAKE_CODE_RUNNERS)
-    ####################################
-    ########### TEST SUITES ############
-    ####################################
     MAKE_CODE_RUNNERS(runners main_runner)
     MESSAGE(STATUS "Total runners produced: ${.g}${TOTAL}${..}")
-ENDIF ()
-#####################################################################
-IF (BUILD_DOCS)
+    #####################################################################
     MESSAGE(CHECK_START "${.y}CMaking AsciiDoc Documentation${..}")
     FILE(COPY ${CMAKE_SOURCE_DIR}/docs DESTINATION ${CMAKE_BINARY_DIR})
     SET(DOCS_SRC ${CMAKE_BINARY_DIR}/docs/src)
@@ -47,12 +43,12 @@ IF (BUILD_DOCS)
     ADD_CUSTOM_COMMAND(TARGET asciidoc
             POST_BUILD
             WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-            COMMAND asciidoctor -D ${CMAKE_SOURCE_DIR}/docs -o index.html ${FILES}
+            COMMAND asciidoctor -D ${CMAKE_SOURCE_DIR}/docs -o ../index.html ${FILES}
             WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
             COMMENT "Evaluating asciidoctor: ${FILES}")
     MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
     UNSET(FILES)
-    ###
+    #####################################################################
     MESSAGE(CHECK_START "${.y}CMaking Markdown Documentation${..}")
     SET(FILES ${DOCS_SRC}/fhatos.md)
     ADD_CUSTOM_TARGET(markdown ALL DEPENDS main_runner)
