--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,10 +26,11 @@ IF (BUILD_TESTS)
             MATH(EXPR COUNTER "${COUNTER}+1")
             MESSAGE(CHECK_START "${.y}CMaking ${PACKAGE_TEST}${..}")
             ADD_EXECUTABLE(${PACKAGE_TEST} ${CMAKE_SOURCE_DIR}/test/${PACKAGE}/${PACKAGE_TEST}/${PACKAGE_TEST}.cpp)
+            ADD_COMPILE_OPTIONS("-Wno-dev")
             ADD_DEFINITIONS("-DFOS_LOGGING=DEBUG" "-DNATIVE" "-Wno-ambiguous-reversed-operator")
             TARGET_LINK_LIBRARIES(${PACKAGE_TEST} unity::framework tsl::ordered_map paho-mqttpp3)
             #TARGET_PRECOMPILE_HEADERS(${PACKAGE_TEST} PUBLIC ${ROOT_SOURCE_DIR}/test_fhatos.hpp)
-            TARGET_PRECOMPILE_HEADERS(${PACKAGE_TEST} REUSE_FROM ${PROJECT_NAME})
+            #TARGET_PRECOMPILE_HEADERS(${PACKAGE_TEST} REUSE_FROM ${PROJECT_NAME})
             SET_TARGET_PROPERTIES(${PACKAGE_TEST} PROPERTIES
                     ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test/build"
                     LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test/build"
