--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -25,6 +25,9 @@ jobs:
     - name: Install Python
       uses: actions/setup-python@v1
 
+    - name: Install markdown-code-runner
+      run: pip install markdown-code-runner
+
     - name: Install PlatformIO
       run: |
         python -m pip install --upgrade pip
