--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -13,9 +13,8 @@ IF (BUILD_DOCS)
             MATH(EXPR COUNTER "${COUNTER}+1")
             MESSAGE(CHECK_START "${.y}CMaking ${PACKAGE_RUNNER}${..}")
             ADD_EXECUTABLE(${PACKAGE_RUNNER} ${CMAKE_SOURCE_DIR}/docs/src/${PACKAGE}/${PACKAGE_RUNNER}/${PACKAGE_RUNNER}.cpp)
-            ADD_COMPILE_OPTIONS("-Wno-dev")
             TARGET_LINK_LIBRARIES(${PACKAGE_RUNNER} tsl::ordered_map paho-mqttpp3)
-            # TARGET_PRECOMPILE_HEADERS(${PACKAGE_RUNNER} REUSE_FROM ${PROJECT_NAME})
+            TARGET_PRECOMPILE_HEADERS(${PACKAGE_RUNNER} REUSE_FROM ${PROJECT_NAME})
             SET_TARGET_PROPERTIES(${PACKAGE_RUNNER} PROPERTIES
                     ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/docs/build"
                     LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/docs/build"
@@ -46,17 +45,4 @@ IF (BUILD_DOCS)
     UNSET(FILES)
     MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
     #####################################################################
-    #MESSAGE(CHECK_START "${.y}CMaking Markdown Documentation${..}")
-    #SET(FILES ${DOCS_SRC}/fhatos.md)
-    #ADD_CUSTOM_TARGET(markdown ALL DEPENDS main_runner)
-    #ADD_CUSTOM_COMMAND(TARGET markdown
-    #        POST_BUILD
-    #        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-    #        COMMAND markdown-code-runner ${FILES}
-    #        COMMENT "Evaluating markdown-code-runner: ${R_DONE}")
-    #MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
-    ###
-    #MESSAGE(CHECK_START "${.y}CMaking Doxygen Documentation${..}")
-    #FILE(COPY ${CMAKE_SOURCE_DIR}/docs DESTINATION ${CMAKE_BINARY_DIR})
-    #MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 ENDIF ()
