got esp32 up to snuff. working on a weird bug around null terminated strings. this language is inane.

--- a/platformio.ini
+++ b/platformio.ini
@@ -129,8 +129,8 @@ test_ignore =
 ###########################################
 [env:esp32]
 extends = esp32
-test_filter =
-    #language/test_parser
+#test_filter =
+#    structure/test_furi
 test_ignore =
     CMakeFiles/**.*
 #util/test_mutex
