lot of good work on the mm-ADT parser. removed a bunch of redundant code. now support unary operators wihtout . prefixes. realized EOF characters were getting into certain expressions -- check for that now. unary sugars can be added dynamically by simply updating a UNARY_MAP with symbol to inst opcode mappings. found a bug in StringHelper.lookAhead(). Learned about tellg() and seekg() and now using those functions to wind back the read head of the stream.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,8 +102,9 @@ IF (BUILD_NATIVE)
     TARGET_COMPILE_FEATURES(${PROJECT_NAME} PRIVATE cxx_std_20)
     ##### PRECOMPILED HEADERS #####
     SET(ROOT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)
-    SET(HEADER_FILES ${ROOT_SOURCE_DIR}/cached_headers.hpp)
-    TARGET_PRECOMPILE_HEADERS(${PROJECT_NAME} PRIVATE ${HEADER_FILES})
+    SET(HEADER_FILES "<any>;<atomic>;<deque>;<functional>;<map>;<memory>;<optional>;<queue>;<set>;<string>;<tsl/ordered_map.h>;<mqtt/async_client.h>")
+    MESSAGE(STATUS "${.y}Processing precompiled headers: ${.g}${HEADER_FILES}${..}")
+    TARGET_PRECOMPILE_HEADERS(${PROJECT_NAME} PUBLIC ${HEADER_FILES})
     ###############################
     ADD_COMPILE_OPTIONS("-Wno-ambiguous-reversed-operator")
     ADD_DEFINITIONS("-DNATIVE")
