realized you can use =0 to declare a class function abstract. went through and got rid of my ghetto throw exception workaround. rewnamed AbstractFileSystem to XFileSystem in accordance with X being the pattern for abstract classes. A few random other tweaks. Added cd() instruction to file system. Provided a security check to ensure users are unable to cd() themselves out of the mount directory of the local machine.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -59,5 +59,6 @@ IF (BUILD_TESTS)
     MAKE_TESTS(structure "test_furi")
     MAKE_TESTS(structure/io "test_fs")
     MAKE_TESTS(util "test_mutex")
+    MAKE_TESTS(play "play")
     MESSAGE(STATUS "Total tests produced: ${.g}${TOTAL}${..}")
 ENDIF ()
