more work on serialization. added more test cases around router obj handling (wrapping and unwrapping sources).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,7 @@ IF (MSVC)
     )
 ELSE ()
     EXECUTE_PROCESS(
-            COMMAND ping www.google.com -c 2
+            COMMAND ping www.google.com -c 2 -t 3
             ERROR_QUIET
             RESULT_VARIABLE NO_CONNECTION
     )
