squashing memory leaks.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,32 +122,35 @@ ENDIF ()
 ####################################
 ####################################
 ### LIBWEBSOCKETS: UNIVERSAL WEB PROTOCOL API
-MESSAGE(CHECK_START "${.y}CMaking libwebsockets library${..}")
-FIND_PACKAGE(PkgConfig)
-PKG_CHECK_MODULES(LIB_WEBSOCKETS REQUIRED libwebsockets)
-GET_FILENAME_COMPONENT(
-        LIB_WEBSOCKETS_INSTALL_DIR
-        ${LIB_WEBSOCKETS_LIBRARY_DIRS}
-        DIRECTORY
-)
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC
-        ${LIB_WEBSOCKETS_LIBRARIES})
-#SET_TARGET_PROPERTIES(
-#        ${PROJECT_NAME}
-#        PROPERTIES
-#        INCLUDE_DIRECTORIES
-#        ${LIB_WEBSOCKETS_INCLUDE_DIRS}
-#        LINK_FLAGS
-#        "-L${LIB_WEBSOCKETS_LIBRARY_DIRS}"
-#        COMPILE_DEFINITIONS
-#        INSTALL_DATADIR="${LIB_WEBSOCKETS_INSTALL_DIR}/share"
-#)
-CMAKE_PRINT_VARIABLES(LIB_WEBSOCKETS_LIBRARIES,LIB_WEBSOCKETS_INCLUDE_DIRS)
-MESSAGE(STATUS "${.y}libwebsockets libs${..}: ${.g}${LIB_WEBSOCKETS_INCLUDE_DIRS}${..}")
-#ADD_DEPENDENCIES(${PROJECT_NAME}
-#        websockets_shared)
-FILE(COPY ${LIB_WEBSOCKETS_INCLUDE_DIRS} DESTINATION ${CMAKE_BINARY_DIR}/_deps/libwebsockets-src)
-MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
+OPTION(USE_LIBWEBSOCKETS "Use libwebsockets" OFF) # ON/OFF
+IF (USE_LIBWEBSOCKETS)
+    MESSAGE(CHECK_START "${.y}CMaking libwebsockets library${..}")
+    FIND_PACKAGE(PkgConfig)
+    PKG_CHECK_MODULES(LIB_WEBSOCKETS REQUIRED libwebsockets)
+    GET_FILENAME_COMPONENT(
+            LIB_WEBSOCKETS_INSTALL_DIR
+            ${LIB_WEBSOCKETS_LIBRARY_DIRS}
+            DIRECTORY
+    )
+    TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC
+            ${LIB_WEBSOCKETS_LIBRARIES})
+    #SET_TARGET_PROPERTIES(
+    #        ${PROJECT_NAME}
+    #        PROPERTIES
+    #        INCLUDE_DIRECTORIES
+    #        ${LIB_WEBSOCKETS_INCLUDE_DIRS}
+    #        LINK_FLAGS
+    #        "-L${LIB_WEBSOCKETS_LIBRARY_DIRS}"
+    #        COMPILE_DEFINITIONS
+    #        INSTALL_DATADIR="${LIB_WEBSOCKETS_INSTALL_DIR}/share"
+    #)
+    CMAKE_PRINT_VARIABLES(LIB_WEBSOCKETS_LIBRARIES,LIB_WEBSOCKETS_INCLUDE_DIRS)
+    MESSAGE(STATUS "${.y}libwebsockets libs${..}: ${.g}${LIB_WEBSOCKETS_INCLUDE_DIRS}${..}")
+    #ADD_DEPENDENCIES(${PROJECT_NAME}
+    #        websockets_shared)
+    FILE(COPY ${LIB_WEBSOCKETS_INCLUDE_DIRS} DESTINATION ${CMAKE_BINARY_DIR}/_deps/libwebsockets-src)
+    MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
+ENDIF ()
 ####################################
 ####################################
 ### YAML: YAML PARSER IMPLEMENTATION
