package refactoring. added mqtt server startup script.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -57,7 +57,7 @@ IF (BUILD_TESTS)
     MAKE_TESTS(process/actor "test_actor")
     MAKE_TESTS(structure/router "test_router")
     MAKE_TESTS(structure "test_furi")
-    MAKE_TESTS(structure/io "test_fs")
+    MAKE_TESTS(module "test_fs")
     MAKE_TESTS(util "test_mutex")
     MAKE_TESTS(play "play")
     MESSAGE(STATUS "Total tests produced: ${.g}${TOTAL}${..}")
