sped up build on a few tests by not reusing cached headers from root project. knocked out some more test cases in test_furi... still having some issues with .. and . resolutions (sucks .. tired of pointer crap).

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,7 +19,7 @@ IF (BUILD_TESTS)
     ########### TEST SUITE BUILDER ############
     ###########################################
     SET(TOTAL 0)
-    FUNCTION(MAKE_TESTS PACKAGE PACKAGE_TESTS)
+    FUNCTION(MAKE_TESTS PACKAGE PACKAGE_TESTS USE_PRECOMPILED_HEADERS)
         SET(COUNTER 0)
         MESSAGE(STATUS "${.m}Processing " ${PACKAGE} " with " ${PACKAGE_TESTS}${..})
         FOREACH (PACKAGE_TEST ${PACKAGE_TESTS})
@@ -28,7 +28,10 @@ IF (BUILD_TESTS)
             ADD_EXECUTABLE(${PACKAGE_TEST} ${CMAKE_SOURCE_DIR}/test/${PACKAGE}/${PACKAGE_TEST}/${PACKAGE_TEST}.cpp)
             ADD_DEFINITIONS("-DFOS_LOGGING=DEBUG" "-DNATIVE" "-Wno-ambiguous-reversed-operator") #  "-Wno-dev"
             TARGET_LINK_LIBRARIES(${PACKAGE_TEST} unity::framework tsl::ordered_map paho-mqttpp3)
-            TARGET_PRECOMPILE_HEADERS(${PACKAGE_TEST} REUSE_FROM ${PROJECT_NAME})
+            IF (USE_PRECOMPILED_HEADERS)
+                MESSAGE("-- ${.m}${PACKAGE_TEST}${.y} using precompiled headers:${.g}${HEADER_FILES}")
+                TARGET_PRECOMPILE_HEADERS(${PACKAGE_TEST} REUSE_FROM ${PROJECT_NAME})
+            ENDIF ()
             SET_TARGET_PROPERTIES(${PACKAGE_TEST} PROPERTIES
                     ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test/build"
                     LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test/build"
@@ -43,7 +46,7 @@ IF (BUILD_TESTS)
                 TARGET_LINK_OPTIONS(${PACKAGE_TEST} BEFORE PUBLIC -fsanitize=undefined PUBLIC -fsanitize=address)
             ENDIF ()
             ADD_TEST(${PACKAGE_TEST} ${CMAKE_BINARY_DIR}/test/build/${PACKAGE_TEST}.out)
-            SET_TESTS_PROPERTIES(${PACKAGE_TEST} PROPERTIES TIMEOUT 10)
+            SET_TESTS_PROPERTIES(${PACKAGE_TEST} PROPERTIES TIMEOUT 8)
             MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
         ENDFOREACH ()
         MATH(EXPR COUNTER "${COUNTER}+${TOTAL}")
@@ -52,13 +55,13 @@ IF (BUILD_TESTS)
     ####################################
     ########### TEST SUITES ############
     ####################################
-    MAKE_TESTS(language "test_fluent;test_obj;test_parser;test_insts")
-    MAKE_TESTS(process "test_scheduler")
-    MAKE_TESTS(process/actor "test_actor")
-    MAKE_TESTS(structure/router "test_router")
-    MAKE_TESTS(structure "test_furi")
-    MAKE_TESTS(module "test_fs")
-    MAKE_TESTS(util "test_mutex")
-    MAKE_TESTS(play "play")
+    MAKE_TESTS(language "test_fluent;test_obj;test_parser;test_insts" true)
+    MAKE_TESTS(process "test_scheduler" true)
+    MAKE_TESTS(process/actor "test_actor" true)
+    MAKE_TESTS(structure/router "test_router" true)
+    MAKE_TESTS(structure "test_furi" false)
+    MAKE_TESTS(module "test_fs" true)
+    MAKE_TESTS(util "test_mutex" true)
+    MAKE_TESTS(play "play" false)
     MESSAGE(STATUS "Total tests produced: ${.g}${TOTAL}${..}")
 ENDIF ()
